manifests/base.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: css-base
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: css-base
    app.kubernetes.io/name: community-solid-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: css-base
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: css-base
      app.kubernetes.io/name: community-solid-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: css-base
        app.kubernetes.io/name: community-solid-server
    spec:
      containers:
      - args:
        - -l
        - info
        - -b
        - http://community-solid-server.solid/
        - -c
        - config/default.json
        - -f
        - /data/
        env: []
        image: docker.io/solidproject/community-server:6.0.2
        imagePullPolicy: IfNotPresent
        name: community-solid-server
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits: {}
          requests: {}
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
      enableServiceLinks: false
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: data
