manifests/high-performance.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: css-high-performance
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: css-high-performance
    app.kubernetes.io/name: community-solid-server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: css-high-performance
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/instance: css-high-performance
      app.kubernetes.io/name: community-solid-server
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/community-solid-server: runtime/default
      labels:
        app.kubernetes.io/instance: css-high-performance
        app.kubernetes.io/name: community-solid-server
    spec:
      containers:
      - args:
        - -l
        - warn
        - -b
        - http://community-solid-server.solid/
        - -c
        - /config/custom.json
        - -f
        - /data/
        - -w
        - "0"
        image: docker.io/solidproject/community-server:6.0.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /.well-known/openid_configuration
            port: http
          initialDelaySeconds: 60
          periodSeconds: 30
        name: community-solid-server
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /.well-known/openid_configuration
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 4000m
            memory: 8Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/tmp
          name: var-tmp
        - mountPath: /config
          name: config
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 1000
      volumes:
      - emptyDir: {}
        name: var-tmp
      - emptyDir: {}
        name: data
        persistentVolumeClaim:
          claimName: community-solid-server-data
      - configMap:
          items:
          - key: custom.json
            path: custom.json
          name: css-custom-config
        name: config
      - emptyDir: {}
        name: tmp
