manifests/local-proxmox.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/allow-shared-ip: css-shared
    metallb.universe.tf/loadBalancerIPs: 192.168.1.81
  labels:
    app.kubernetes.io/instance: css-local-proxmox
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  loadBalancerIP: 192.168.1.81
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: css-local-proxmox
    app.kubernetes.io/name: community-solid-server
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: css-local-proxmox
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: css-local-proxmox
      app.kubernetes.io/name: community-solid-server
  template:
    metadata:
      annotations:
        container.apparmor.security.beta.kubernetes.io/community-solid-server: runtime/default
      labels:
        app.kubernetes.io/instance: css-local-proxmox
        app.kubernetes.io/name: community-solid-server
    spec:
      containers:
      - args:
        - -l
        - info
        - -b
        - http://community-solid-server.solid/
        - -c
        - config/sparql-endpoint.json
        - -f
        - /data/
        image: docker.io/solidproject/community-server:6.0.2
        imagePullPolicy: IfNotPresent
        name: community-solid-server
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits: {}
          requests: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/tmp
          name: var-tmp
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
        supplementalGroups:
        - 1000
      volumes:
      - emptyDir: {}
        name: var-tmp
      - emptyDir: {}
        name: tmp
      - name: data
        persistentVolumeClaim:
          claimName: community-solid-server-data
