manifests/nodeport-dev.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: css-nodeport-dev
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  ports:
  - name: http
    nodePort: 30080
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: css-nodeport-dev
    app.kubernetes.io/name: community-solid-server
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: css-nodeport-dev
    app.kubernetes.io/name: community-solid-server
    app.kubernetes.io/version: 0.3.0
  name: css-community-solid-server
  namespace: solid
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: css-nodeport-dev
      app.kubernetes.io/name: community-solid-server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: css-nodeport-dev
        app.kubernetes.io/name: community-solid-server
    spec:
      containers:
      - args:
        - -l
        - debug
        - -b
        - http://localhost:30080/
        - -c
        - config/default.json
        - -f
        - /data/
        - -t
        image: docker.io/solidproject/community-server:6.0.2
        imagePullPolicy: IfNotPresent
        name: community-solid-server
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
      enableServiceLinks: false
      volumes:
      - emptyDir: {}
        name: tmp
      - emptyDir: {}
        name: data
